--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>sslichnyi</groupId>
-    <artifactId>javacore</artifactId>
+    <artifactId>JavaCore</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <build>
@@ -20,7 +20,6 @@
             </plugin>
         </plugins>
     </build>
-
 
     <dependencies>
         <dependency>
